Archive2/32/c0696ff5bd94fa/output
main.cpp:16:44: error: expected expression
    } else if (street.length() > STREET_MAX) {
                                           ^
1 error generated.
